--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nuxtjs/bulma": "^1.2.7",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
+    "core-js": "2.6.11",
     "nuxt": "^2.13.0"
   },
   "devDependencies": {
