--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-nuxt": "^1.0.0",
     "eslint-plugin-prettier": "^3.1.4",
     "firebase": "^7.16.1",
+    "firebase-tools": "^8.6.0",
     "prettier": "^2.0.5"
   }
 }
